--- a/7.Sizing/index.html
+++ b/7.Sizing/index.html
@@ -7,29 +7,104 @@
     <title>Sizing</title>
   </head>
   <body class="p-20">
-    <!-- Width -->
+   <!-- Width -->
     <!-- https://tailwindcss.com/docs/width -->
+    <h1>Width All Around</h1>
+    <div class="bg-teal-100 p-5">
+      <div class="bg-teal-600 ">0</div>
+      <div class="bg-teal-600 ">1</div>
+      <div class="bg-teal-600 ">1.5</div>
+      <div class="bg-teal-600 ">2</div>
+      <div class="bg-teal-600 ">3</div>
+      <div class="bg-teal-600 ">5</div>
+      <div class="bg-teal-600 ">6</div>
+      <div class="bg-teal-600 ">7</div>
+      <div class="bg-teal-600 ">8</div>
+      <div class="bg-teal-600 ">9</div>
+      <div class="bg-teal-600 ">10</div>
+      <div class="bg-teal-600 ">11</div>
+      <div class="bg-teal-600 ">12</div>
+      <div class="bg-teal-600 ">14</div>
+      <div class="bg-teal-600 ">16</div>
+      <div class="bg-teal-600 ">20</div>
+      <div class="bg-teal-600 ">24</div>
+      <div class="bg-teal-600 ">28</div>
+      <div class="bg-teal-600 ">32</div>
+      <div class="bg-teal-600 ">36</div>
+      <div class="bg-teal-600 ">64</div>
+      <div class="bg-teal-600 ">80</div>
+      <div class="bg-teal-600 ">96</div>
+    </div>
 
     <!-- Percentages -->
+    <h1 class="mt-5">Percentages</h1>
+    <div class="bg-teal-200 mb-5 p-5">
+      <div class="bg-green-400 p-2 mb-4 ">1/2</div>
+      <div class="bg-green-400 p-2 mb-4 ">1/3</div>
+      <div class="bg-green-400 p-2 mb-4 ">2/3</div>
+      <div class="bg-green-400 p-2 mb-4 ">1/4</div>
+      <div class="bg-green-400 p-2 mb-4 ">2/4</div>
+      <div class="bg-green-400 p-2 mb-4 ">3/4</div>
+      <div class="bg-green-400 p-2 mb-4 ">1/5</div>
+    </div>
 
     <!-- Max Width -->
     <!-- https://tailwindcss.com/docs/max-width -->
+    <h1 class="mt-5">Max Width</h1>
+    <div class="bg-yellow-100 p-10 mb-10 ">
+      <!-- lorem 100 -->
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas mollitia
+      soluta harum officia, repellat odit ratione, eligendi voluptatem dolor
+      magni ad ipsum eaque quae iusto ullam odio voluptate. Eos culpa dolore
+      fugit ad enim consectetur iure temporibus explicabo voluptas ratione. Fuga
+      expedita dicta vero, ipsa accusantium illo aut corrupti nulla ipsam ex, a
+      sunt alias natus ratione. Explicabo sunt, dolor optio harum possimus quo
+      blanditiis velit fugiat officiis, voluptatem, pariatur quisquam omnis?
+      Debitis porro id aspernatur possimus, earum dolorum quia! Aperiam aliquam
+      totam illo praesentium, fugit repellendus! Assumenda optio autem quae odit
+      voluptatem ad facere et quas, itaque, inventore nihil.
+    </div>
 
     <!-- Width of the viewport -->
+    <h1 class="mt-5">VW & Width100%</h1>
+    <div class="bg-green-500 my-2 p-5 ">(vw) screen</div>
     <!-- 100% of container -->
-    <!-- Arbitrary/Custom Width -->
+    <div class="bg-green-500 my-2 p-5 ">(width 100%) w-full</div>
+    <!-- Arbitrary Width -->
+    <div class="bg-teal-500 text-white my-2 ">
+      Arbitrary Width (500px)
+    </div>
 
     <!-- Height (Most of the same options as widths) -->
     <!-- https://tailwindcss.com/docs/height -->
+    <h1 class="mt-5">Height All Around</h1>
+    <div class="flex items-end mt-20 mb-10">
+      <div class="bg-indigo-400 ml-5 ">height 24</div>
+      <div class="bg-indigo-400 ml-5 ">height 32</div>
+      <div class="bg-indigo-400 ml-5 ">height 40</div>
+      <div class="bg-indigo-400 ml-5 ">height 48</div>
+      <div class="bg-indigo-400 ml-5 ">height 64</div>
+      <div class="bg-indigo-400 ml-5 ">height 80</div>
+    </div>
 
     <!-- Min Height -->
     <!-- https://tailwindcss.com/docs/min-height -->
+    <h1 class="mt-5">Min Height Full</h1>
+    <div class="p-5  bg-green-300 mb-5">
+      <div class=" bg-teal-400">Take Full Height</div>
+    </div>
 
     <!-- Max Height -->
     <!-- https://tailwindcss.com/docs/max-height -->
+    <div class=" bg-orange-200 mb-10">
+      <div class="m-20 bg-orange-500 ">Max Height Full</div>
+    </div>
 
     <!-- Full screen height -->
+    <h1 class="mb-2">Full Screen Height</h1>
+    <div class="bg-pink-300 mb-4 ">Hello</div>
 
     <!-- Width Auto -->
+    <div class="bg-green-400 p-5 ">Auto</div>
   </body>
 </html>
