sizing and position completed

--- a/5. Layout Position/index.html
+++ b/5. Layout Position/index.html
@@ -9,30 +9,30 @@
   <body class="p-20">
      <!-- https://tailwindcss.com/docs/position -->
      <h1 class="mb-3">Position</h1>
-     <div class=" bg-green-200">
+     <div class="relative w-1/2 h-40 bg-green-200">
        <p>Relative</p>
-       <div class=" bg-teal-500 ">
+       <div class="absolute bottom-0 right-0 bg-teal-500 ">
          <p>Absolute</p>
        </div>
      </div>
  
-     <div class=" bg-green-200 mt-5 mb-5">
+     <div class="relative w-1/2 h-40 bg-green-200 mt-5 mb-5">
        <p>Relative</p>
-       <div class=" bg-teal-500">
+       <div class="absolute left-0 top-0 bg-teal-500">
          <p>Absolute</p>
        </div>
      </div>
  
-     <div class=" bg-green-200 mt-5 mb-5">
+     <div class="relative w-1/2 h-40 bg-green-200 mt-5 mb-5">
        <p>Relative</p>
-       <div class=" bg-teal-500">
+       <div class="absolute right-0 top-0 h-16 w-16 bg-teal-500">
          <p>Absolute</p>
        </div>
      </div>
  
-     <div class=" bg-green-200 mt-5 mb-5">
+     <div class="relative w-1/2 h-40 bg-green-200 mt-5 mb-5">
        <p>Relative</p>
-       <div class=" bg-teal-500">
+       <div class="absolute bottom-0 h-16 w-16 bg-teal-500">
          <p>Absolute</p>
        </div>
      </div>
