--- a/6. Backgrounds Shadows/index.html
+++ b/6. Backgrounds Shadows/index.html
@@ -10,7 +10,7 @@
     <!-- Background Images -->
     <!-- https://tailwindcss.com/docs/background-image -->
     <div
-      class="h-screen w-full bg-blue-500 bg-cover bg-no-repeat bg-center"
+      class="h-screen w-full bg-blue-500 "
       style="
         background-image: url('https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
       "
@@ -18,7 +18,7 @@
 
     <!-- Shadows -->
     <!-- https://tailwindcss.com/docs/drop-shadow -->
-    <!-- I know we didn't cover flexbox, but it's just for demo purposes -->
+   
     <div class="flex flex-wrap">
       <div class="w-[400px] mt-10 ml-4 p-3 ">Shadow Medium</div>
       <div class="w-[400px] mt-10 ml-7 p-3 ">Shadow Large</div>
