--- a/10. Flexbox/index.html
+++ b/10. Flexbox/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- https://tailwindcss.com/docs/flex -->
     <div class="border m-10">
-      <ul >
+      <ul class="flex">
         <li class="bg-teal-100 m-5 p-5">01</li>
         <li class="bg-teal-100 m-5 p-5">02</li>
         <li class="bg-teal-100 m-5 p-5">03</li>
@@ -20,7 +20,7 @@
 
     <!-- https://tailwindcss.com/docs/flex-direction#column -->
     <div class="border m-10">
-      <ul >
+      <ul class="flex flex-col-reverse" >
         <li class="bg-teal-100 m-5 p-5">01</li>
         <li class="bg-teal-100 m-5 p-5">02</li>
         <li class="bg-teal-100 m-5 p-5">03</li>
@@ -32,7 +32,7 @@
     <!-- https://tailwindcss.com/docs/justify-items -->
     <div class="border m-10">
       <div class="border">
-        <ul >
+        <ul class="flex justify-start">
           <li class="bg-teal-100 m-5 p-5">01</li>
           <li class="bg-teal-100 m-5 p-5">02</li>
           <li class="bg-teal-100 m-5 p-5">03</li>
@@ -41,7 +41,7 @@
         </ul>
       </div>
       <div class="border">
-        <ul>
+        <ul class="flex justify-end">
           <li class="bg-teal-100 m-5 p-5">01</li>
           <li class="bg-teal-100 m-5 p-5">02</li>
           <li class="bg-teal-100 m-5 p-5">03</li>
@@ -50,7 +50,7 @@
         </ul>
       </div>
       <div class="border">
-        <ul >
+        <ul class="flex justify-center">
           <li class="bg-teal-100 m-5 p-5">01</li>
           <li class="bg-teal-100 m-5 p-5">02</li>
           <li class="bg-teal-100 m-5 p-5">03</li>
@@ -59,7 +59,7 @@
         </ul>
       </div>
       <div class="border">
-        <ul >
+        <ul class="flex justify-evenly">
           <li class="bg-teal-100 m-5 p-5">01</li>
           <li class="bg-teal-100 m-5 p-5">02</li>
           <li class="bg-teal-100 m-5 p-5">03</li>
@@ -68,7 +68,7 @@
         </ul>
       </div>
       <div class="border">
-        <ul >
+        <ul class="flex justify-around">
           <li class="bg-teal-100 m-5 p-5">01</li>
           <li class="bg-teal-100 m-5 p-5">02</li>
           <li class="bg-teal-100 m-5 p-5">03</li>
@@ -80,11 +80,11 @@
 
     <!-- https://tailwindcss.com/docs/order -->
     <div class="border m-10">
-      <ul >
-        <li class="bg-teal-100 m-5 p-5 order-5">01</li>
-        <li class="bg-teal-100 m-5 p-5 order-4">02</li>
-        <li class="bg-teal-100 m-5 p-5 order-3">03</li>
-        <li class="bg-teal-100 m-5 p-5 order-2">04</li>
+      <ul class="flex">
+        <li class="bg-teal-100 m-5 p-5 order-3">01</li>
+        <li class="bg-teal-100 m-5 p-5 order-5">02</li>
+        <li class="bg-teal-100 m-5 p-5 order-2 ">03</li>
+        <li class="bg-teal-100 m-5 p-5 order-4" >04</li>
         <li class="bg-teal-100 m-5 p-5 order-1">05</li>
       </ul>
     </div>
@@ -92,15 +92,15 @@
     <!-- Grow and shrink -->
     <!-- https://tailwindcss.com/docs/flex-shrink -->
     <div class="border m-10">
-      <div >
+      <div class="flex w-100">
         <!-- flex-none: Prevent item from growing or shrinking -->
-        <div class="p-5 m-3 w-64 bg-teal-100 ">01</div>
+        <div class="p-5 m-3 w-64 bg-teal-100 flex-none">01</div>
         <!-- flex-initial:  Allow item to shrink but not grow, taking into account its initial size  -->
-        <div class="p-5 m-3 w-64 bg-teal-100 ">02</div>
+        <div class="p-5 m-3 w-64 bg-teal-100 flex-initial">02</div>
         <!-- flex-auto: Allow item to grow and shrink, taking into account its initial size -->
-        <div class="p-5 m-3 w-64 bg-teal-100 ">03</div>
+        <div class="p-5 m-3 w-64 bg-teal-100 flex-auto">03</div>
         <!-- flex-1: Allow item to grow and shrink as needed, ignoring its initial size -->
-        <div class="p-5 m-3 w-64 bg-teal-100 ">04</div>
+        <div class="p-5 m-3 w-64 bg-teal-100 flex-1">04</div>
         <div class="p-5 m-3 bg-teal-100">05</div>
         <div class="p-5 m-3 bg-teal-100">06</div>
         <div class="p-5 m-3 bg-teal-100">07</div>
