--- a/10.Breakpoints/index.html
+++ b/10.Breakpoints/index.html
@@ -7,9 +7,9 @@
     <title>RWD(Responsive Web Design)</title>
 </head>
  <!-- https://tailwindcss.com/docs/responsive-design#overview  -->
-<body class="bg-indigo-400">
+<body class="bg-indigo-500 sm:bg-pink-400 md:bg-blue-600 lg:bg-green-500 xl:bg-yellow-400 2xl:bg-purple-600">
 
     <!-- open devtool (responsive option) to see the changes -->
-   <h1 class="text-white text-xl">Hi Hello How Are You</h1>
+   <h1 class="text-white text-xl md:text-3xl xl:text-5xl">Hi Hello How Are You</h1>
 </body>
 </html>
